--- a/index.html
+++ b/index.html
@@ -1739,7 +1739,8 @@
 					</div>
 				</div>
 				<div class="rk-modal-footer-fill">
-					<a class="rk-modal-call-link" href="tel:7026133344"><svg xmlns="http://www.w3.org/2000/svg"
+					<!-- change mobile number -->
+					<a class="rk-modal-call-link" href="tel:+91-123456789"><svg xmlns="http://www.w3.org/2000/svg"
 							width="15" height="15" viewBox="0 0 18 17.993">
 							<defs>
 								<style>
