--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<style>
+		/* page highlights colorgroup */
 		:root {
 			--colorPrimary: #00AEEF;
 			--colorSecondry: #004274;
@@ -39,9 +40,9 @@
 		content="Godrej Park Retreat, Godrej Park Retreat Sarjapur Road, Godrej Park Retreat Yelahanka, Godrej Park Retreat Bangalore, Godrej Park Retreat Floorplan, Godrej Properties, Godrej Park Retreat Brochure, Godrej Park Retreat Location, Godrej Apartment in Sarjapur Road, Godrej Properties Apartments, Godrej Park Retreat Reviews, Godrej Park Retreat Masterplan, Godrej Park Retreat Pre Launch." />
 
 	<!-- change project name to current project name & location -->
-	<title>Project name | location</title>
+	<title>Godrej Park Retreat Appartment</title>
 
-	<link rel="icon" href="assets/images/fav.svg" sizes="16x16">
+	<link rel="icon" href="assets/images/logo.png" sizes="16x16">	
 
 	<link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
@@ -361,7 +362,7 @@
 						<li class="nav-item">
 							<!-- change project name to current project name -->
 							<a class="nav-link" href="index.html" title="Project Name"><img
-									src="assets/images/a2zlogo.svg" class="mainLogo" alt="A2Z Real Estate Logo"
+									src="assets/images/logos.jpeg" class="mainLogo" alt="A2Z Real Estate Logo"
 									style="height: 5rem; margin-top: 0"></a>
 						</li>
 						<li class="nav-item main-mav-item">
@@ -421,7 +422,7 @@
 					<nav class="navbar navbar-light light-blue lighten-4 rk-mb-nav-pad">
 						<p class="rk-mb-logo-div" style="margin-bottom: 0">
 							<a class="navbar-brand ml-4" href="index-2.html">
-								<img src="assets/images/a2zlogo.svg" class="rk-mb-logo" alt="A2Z Real Estate Logo"
+								<img src="assets/images/logos.jpeg" class="rk-mb-logo" alt="A2Z Real Estate Logo"
 									style="height: 4.5rem">
 							</a>
 						</p>
@@ -1580,15 +1581,17 @@
 							</center>
 
 						</div>
+
+						<!-- leads popup -->
 						<div class="col-md-9">
 							<div class="text-center mt-4 mb-5">
-								<img src="assets/images/a2zlogo.svg" class="modal-rk-logo" alt="A2Z Real Estate Logo">
+								<img src="assets/images/logos.jpeg" class="modal-rk-logo" alt="A2Z Real Estate Logo">
 							</div>
 
 							<div class="text-center mt-4 mb-5">
 
 								<h2>&nbsp;</h2>
-								<h4> Register here and Avail the <span style="font-weight:500;color:#D01127;">BEST
+								<h4> Register here and Avail the <span style="font-weight:500;color:#004274;">BEST
 										OFFERS!</span> </h4>
 							</div>
 							<form class="needs-validation" action="send-mail.php" method="POST" role="form">
