--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<style>
 		/* page highlights colorgroup */
 		:root {
-			--colorPrimary: #00AEEF;
-			--colorSecondry: #004274;
+			--colorPrimary: #8cb032;
+			--colorSecondry: #587808;
 			--colorBtn: #ffffff;
 		}
 	</style>
@@ -42,7 +42,7 @@
 	<!-- change project name to current project name & location -->
 	<title>Godrej Park Retreat Appartment</title>
 
-	<link rel="icon" href="assets/images/logo.png" sizes="16x16">	
+	<link rel="icon" href="assets/images/logo.png" sizes="16x16">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
@@ -66,7 +66,7 @@
 		.rk-btn-2 {
 			text-shadow: 0px 3px 6px var(--colorSecondry);
 			background-color: #004274;
-			background: linear-gradient(-45deg, #00AEEF, #0282b1, #03668a, #004274);
+			background: linear-gradient(-45deg, #8cb032, #587808, #8cb032, #587808);
 			background-size: 400% 400%;
 			-webkit-animation: Gradient 3s ease infinite;
 			-moz-animation: Gradient 3s ease infinite;
@@ -562,7 +562,8 @@
 							style="font-size: 15px; width: 100%; background: transparent;font-weight: bold; text-align: center;color: #fff;">
 							<!-- chanhe color preference -->
 							<span
-								style=" color: #fff;display:  block; background-color: #00AEEF;   background: linear-gradient(-45deg, #00AEEF, #0282b1, #03668a, #004274); background-size: 400% 400%; -webkit-animation: Gradient 3s ease infinite; -moz-animation: Gradient 3s ease infinite; animation: Gradient 3s ease infinite; font-size:15px;">SPECIAL
+								style=" color: #fff;display:  block; background-color: #00AEEF;   	    background: linear-gradient(-45deg, #8cb032, #587808, #8cb032, #587808);
+								 background-size: 400% 400%; -webkit-animation: Gradient 3s ease infinite; -moz-animation: Gradient 3s ease infinite; animation: Gradient 3s ease infinite; font-size:15px;">SPECIAL
 								EOI BOOKING BENEFITS*</span>
 
 							<span
